# treez

./: README.md
tree-sitter-zig/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-zig/bindings/c/: tree-sitter-treez.h  tree-sitter-treez.pc.in
tree-sitter-zig/bindings/go/: binding.go  binding_test.go
tree-sitter-zig/bindings/node/: binding.cc
tree-sitter-zig/bindings/python/tests/: test_binding.py
tree-sitter-zig/bindings/python/tree_sitter_treez/: __init__.py  binding.c
tree-sitter-zig/bindings/rust/: build.rs  lib.rs
tree-sitter-zig/bindings/swift/TreeSitterTreezTests/: TreeSitterTreezTests.swift
tree-sitter-zig/src/: grammar.json  node-types.json  parser.c
tree-sitter-zig/test/corpus/: basics.txt
