[package]
name = "tree-sitter-treez"
description = "A tree-sitter parser for zig"
version = "0.1.0"
authors = ["Hamish MacDonald <elusivenode@gmail.com>"]
license = "GNU AFFERO GENERAL PUBLIC LICENSE"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "treez"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/mercurial-hermes/treez"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
